--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.0",
+    "bcrypt": "^5.1.1",
+    "mongoose": "^8.5.1",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "daisyui": "^4.12.10",
